<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/login_heading"
        style="@style/SpTextAppearence.heading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="top|center"
        android:text="@string/login_str"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_phone_layout"
            style="@style/SpTextAppearence.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:textCursorDrawable="@null"
            app:errorTextAppearance="@style/SpTextAppearence.question.error"
            app:hintTextAppearance="@style/SpTextAppearence.question.label">

            <EditText
                android:id="@+id/phone_number_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAppearance="@style/SpTextAppearence.answer"
                android:textColor="@drawable/inputlayout_text_focus" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_pin_layout"
            style="@style/SpTextAppearence.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:textCursorDrawable="@null"
            app:errorTextAppearance="@style/SpTextAppearence.question.error"
            app:hintTextAppearance="@style/SpTextAppearence.question.label">

            <EditText
                android:id="@+id/pin_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_hint"
                android:inputType="numberPassword"
                android:textAppearance="@style/SpTextAppearence.answer"
                android:textColor="@drawable/inputlayout_text_focus" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgot_pin"
            style="@style/SpTextAppearence.heading.info.small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/forgot_pin" />

        <TextView
            android:id="@+id/signup"
            style="@style/SpTextAppearence.heading.info.small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/wanted_to_signup" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_txt"
        style="@style/SpTextAppearence.button.submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/login"
        android:textAllCaps="true" />


</LinearLayout>
